Update handlers to work with images
