# internal/models/user.go
@@ -3,15 +3,16 @@ package models
 import "time"
 
 type User struct {
-	ID          int
-	FirstName   string
-	LastName    string
-	Email       string
-	Login       string
-	Password    string
-	Description string
-	CreatedAt   time.Time
-	UpdatedAt   time.Time
+	ID           int
+	FirstName    string
+	LastName     string
+	Email        string
+	Login        string
+	Password     string
+	Description  string
+	LogoHashedID string
+	CreatedAt    time.Time
+	UpdatedAt    time.Time
 }
 
 type LoginRequest struct {
@@ -31,15 +32,17 @@ type AuthResponse struct {
 }
 
 type ProfileResponse struct {
-	FirstName string    `json:"first_name"`
-	LastName  string    `json:"last_name"`
-	Login     string    `json:"login"`
-	Email     string    `json:"email"`
-	CreatedAt time.Time `json:"created_at"`
+	FirstName    string    `json:"first_name"`
+	LastName     string    `json:"last_name"`
+	Login        string    `json:"login"`
+	Email        string    `json:"email"`
+	LogoHashedID string    `json:"logo_hashed_id"`
+	CreatedAt    time.Time `json:"created_at"`
 }
 
 type UpdateProfileRequest struct {
-	FirstName string `json:"first_name" validate:"required,max=50"`
-	LastName  string `json:"last_name" validate:"required,max=50"`
-	Email     string `json:"email" validate:"required,email"`
+	FirstName    string `json:"first_name" validate:"required,max=50"`
+	LastName     string `json:"last_name" validate:"required,max=50"`
+	Email        string `json:"email" validate:"required,email"`
+	LogoHashedID string `json:"logo_hashed_id,omitempty"`
 }
